--- a/pj-ai-poc-ui/index.htm
+++ b/pj-ai-poc-ui/index.htm
@@ -34,9 +34,79 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
         var client;
         var request;
 
+
+        var websocketUri = "ws://";
+        var webSocket = null;
+         
+
+        // 初期処理
+        function init() {
+            // ボタン押下イベント設定
+            $("[data-name='message']").keypress(press);
+            // 接続
+            open();
+        }
+
+        // 接続
+        function open() {
+            if (webSocket == null) {
+                // WebSocket の初期化
+                webSocket = new WebSocket(uri);
+                // イベントハンドラの設定
+                webSocket.onopen    = onOpen;
+                webSocket.onmessage = onMessage;
+                webSocket.onclose   = onClose;
+                webSocket.onerror   = onError;
+            }
+        }
+
+        // 接続イベント
+        function onOpen(event) {
+            //ここで待受け画面に切り替える
+            //chat("接続しました。");
+        }
+
+        // メッセージ受信イベント
+        function onMessage(event) {
+             if (event && event.data) {
+                 var jsonData = JSON.parse(event.data);
+
+                 // 状態により画面表示を切り替える
+                 switch (jsonData["destStatus"]) {
+                     case "waitFace":
+                         document.getElementById("label1") = "待機状態";
+                         break;
+                     case "waitQuestion":
+                         document.getElementById("label1") = "質問待機";
+                         break;
+                     case "showAnswer":
+                         document.getElementById("label1") = "回答表示";
+                         document.getElementById("label2") = jsonData["answer"];
+                         break;
+                     case "endApplication":
+                         document.getElementById("label1") = "終了";
+                         break;
+                 }
+            }
+        }
+
+        // エラーイベント
+        function onError(event) {
+            //chat("エラーが発生しました。");
+            alert("エラーが発生しました");
+            //ここで待ち受け画面にss切り替える
+        }
+
+        // 切断イベント
+        function onClose(event) {
+            //chat("切断しました。3秒後に再接続します。(" + event.code + ")");
+            webSocket = null;
+            setTimeout("open()", 3000);
+        }
+
         function setAnswer(text) {
             //document.getElementById("output").value += text;
-            document.getElementById("output_answer").value = text;
+            F = text;
         }
 
         function setCommodityTable(text) {
