--- a/pj-ai-poc-ui/02_listen.html
+++ b/pj-ai-poc-ui/02_listen.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <title>02_listen</title>
@@ -13,17 +13,17 @@
   <tr>
     <td>
 	    <div class="balloon-2-right">
-		  <h1 class="h1">こんにちは！<br>何か御用ですか？</h1>
+		  <h1 class="h1"><br>こんにちは！<br><br>何か御用ですか？<br></h1>
 		</div>
     </td>
     <td >
-    	<img src="img/sota_01.jpg" width=300 height=200 >
+    	<img src="img/sota_01.jpg" width=390 height=260 >
     </td>
   </tr>
 </table>
 </div>
 <br>
-<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:54px"><font face="メイリオ"><B>質問してね！</B></font></div>
+<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>質問してね！</B></font></div>
 </div>
 </body>
 </html>
