--- a/pj-ai-poc-ui/01_search.html
+++ b/pj-ai-poc-ui/01_search.html
@@ -16,7 +16,7 @@
   <tr>
     <td>
 	    <div class="balloon-1-right">
-		  <h1 class="h1"><br><br>ボクと眼を合わせてね<br><br></h1>
+		  <h1 class="sota"><br><br>ボクと目を合わせてね<br><br></h1>
 		</div>
     </td>
     <td >
@@ -26,7 +26,7 @@
 </table>
 </div>
 <br>
-<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>眼を合わせると会話が開始します</B></font></div>
+<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>目を合わせると会話が開始します</B></font></div>
 </div>
 </body>
 </html>
