--- a/pj-ai-poc-ui/02_listen.html
+++ b/pj-ai-poc-ui/02_listen.html
@@ -13,7 +13,7 @@
   <tr>
     <td>
 	    <div class="balloon-2-right">
-		  <h1 class="h1"><br>こんにちは！<br><br>何か御用ですか？<br></h1>
+		  <h1 class="sota"><br>いらっしゃいませ！<br><br>なにかご用ですか？<br></h1>
 		</div>
     </td>
     <td >
@@ -23,7 +23,7 @@
 </table>
 </div>
 <br>
-<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>質問してね！</B></font></div>
+<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>目が青くなったら、質問してね！</B></font></div>
 </div>
 </body>
 </html>
