--- a/pj-ai-poc-ui/03_answer_floor.html
+++ b/pj-ai-poc-ui/03_answer_floor.html
@@ -6,12 +6,15 @@
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="style.css" type="text/css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<body style="margin:3;">
+<div style="width:100%;height:100%;margin-left: auto; margin-right: auto;">
 <div >
 <table>
   <tr>
     <td>
-	    <div class="balloon-3-right">
-		  <h2 class="h2"></h2>
+	    <div class="balloon-3b-right">
+		  <h2 class="sota"></h2>
+            <img src='./data/FloorMap.png' width="800" />
 		</div>
     </td>
     <td >
@@ -19,10 +22,6 @@
     </td>
   </tr>
 </table>
-<div><RIGHT><h3 class="h3"></h3></RIGHT></div>
-<div class="section1">
-    <img src='./data/FloorMap.png' width='400' />
-</div>
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/getdata_floor.js"></script>
 </html>
