--- a/pj-ai-poc-ui/index.htm
+++ b/pj-ai-poc-ui/index.htm
@@ -29,6 +29,7 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.csvToTable.js"></script>
+    <script src="load.js"></script>
     <!--<script src="speech.1.0.0.js" type="text/javascript"></script>-->
     <script type="text/javascript">
         function init() {
@@ -39,14 +40,13 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
                     if (ws == null) {
                         // WebSocket の初期化
                         ws = new WebSocket(websocketUri);
-                        document.getElementById("output").value = "呼ばれた";
                     }
                 }
 
                 // 接続イベント
                 ws.onopen = function onOpen(evt) {
                     //ここで待受け画面に切り替える
-                    document.getElementById("output").value = "接続/待機状態";
+                    $('#page').load('01_search.html');
                 }
 
                  // メッセージ受信イベント
@@ -57,14 +57,13 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
                         // 状態により画面表示を切り替える
                         switch (jsonData["destStatus"]) {
                             case "waitFace":
-                                document.getElementById("output").value ="待機状態";
+                                $('#page').load('01_search.html');
                                 break;
                             case "waitQuestion":
-                                document.getElementById("output").value ="質問待機";
+                                $('#page').load('02_listen.html');
                                 break;
                             case "showAnswer":
-                                //document.getElementById("label1") = "回答表示";
-                                document.getElementById("output").value = jsonData["text"];
+                                $('#page').load('03_answer.html');
                                 break;
                             case "endApplication":
                                 document.getElementById("output").value = "終了";
@@ -75,9 +74,7 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
 
                  // エラーイベント
                  ws.onerror = onError =  function onError(event) {
-                     //chat("エラーが発生しました。");
                      alert("エラーが発生しました");
-                     //ここで待ち受け画面にss切り替える
                  }
 
                  // 切断イベント
@@ -115,82 +112,64 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
             document.getElementById("label1").innerHTML = "おすすめの商品"
         }
 
-        function start() {
-            return;
-        }
-
-        function GetQnA() {
-            var data = {question:getText()}
-            $.ajax({
-                type:"post",
-                url:"https://westus.api.cognitive.microsoft.com/qnamaker/v1.0/knowledgebases/0bd0fcfa-5bdb-45d8-abb8-25d53cf6f9a0/generateAnswer",        // POST送信先のURL
-                data:JSON.stringify(data),
-                contentType: 'application/json',
-                headers: { 'Ocp-Apim-Subscription-Key': 'f57ae0d4213342fb8f24db4af17942d3' },
-                success: function (json_data) {   // 200 OK時
-                    setAnswer(json_data["answer"]);
-                    setCommodityTable(json_data["answer"]);
-                },
-                error: function() {         // HTTPエラー時
-                    setAnswer("Server Error. Pleasy try again later.");
-                },
-                complete: function() {      // 成功・失敗に関わらず通信が終了した際の処理
-                    //button.attr("disabled", false);  // ボタンを再び enableにする
-                }
-            });         
-        }
+        init();
     </script>
 </head>
 <body style="background-color:white">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
-                <h2>
-                    音声認識から回答までのテスト
-                </h2>
+            <div id="page"></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12"><p>Microsoft Cognitive Servicesを利用したPoC</p></div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" id="useMic" checked/> マイクを使って話しかける
-                    </label>
+
+                <!--<div class="row">
+                <div class="col-md-12">
+                    <h2>
+                        音声認識から回答までのテスト
+                    </h2>
                 </div>
             </div>
-        </div>
-        <div class="row"></div>
-        <div class="row">
-            <div class="col-sm-9"><button type="button" class="btn btn-primary" onclick="init()">話しかける</button></div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-2"></div>
-        </div>
-        <p></p>
-        <form>
-            <div class="form-group">
-                <label>聞き取った内容</label>
-                <textarea id="output" style='width:400px;' rows="5" class="form-control"></textarea>
+            <div class="row">
+                <div class="col-md-12"><p>Microsoft Cognitive Servicesを利用したPoC</p></div>
             </div>
-        </form>
-        <div class="row">
-            <div class="col-sm-9"><button type="button" class="btn btn-success" onclick="GetQnA()">回答表示</button></div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-2"></div>
-        </div>
-        <p></p>
-        <form>
-            <div class="form-group">
-                <label>おすすめの回答</label>
-                <textarea id="output_answer" style='width:400px;' rows="5" class="form-control"></textarea>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" id="useMic" checked/> マイクを使って話しかける
+                        </label>
+                    </div>
+                </div>
             </div>
-        </form>
-        <p></p>
-        <label id="label1"></label>
-        <table id="dt-commodity"class="table table-striped"></table>
- 
-    </div>
+            <div class="row"></div>
+            <div class="row">
+                <div class="col-sm-9"><button type="button" class="btn btn-primary" onclick="init()">話しかける</button></div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-2"></div>
+            </div>
+            <p></p>
+            <form>
+                <div class="form-group">
+                    <label>聞き取った内容</label>
+                    <textarea id="output" style='width:400px;' rows="5" class="form-control"></textarea>
+                </div>
+            </form>
+            <div class="row">
+                <div class="col-sm-9"><button type="button" class="btn btn-success" onclick="GetQnA()">回答表示</button></div>
+                <div class="col-sm-1"></div>
+                <div class="col-sm-2"></div>
+            </div>
+            <p></p>
+            <form>
+                <div class="form-group">
+                    <label>おすすめの回答</label>
+                    <textarea id="output_answer" style='width:400px;' rows="5" class="form-control"></textarea>
+                </div>
+            </form>
+            <p></p>
+            <label id="label1"></label>
+            <table id="dt-commodity"class="table table-striped"></table>-->
+
+            </div>
 </body>
 </html>        
