小向さん分反映

--- a/pj-ai-poc-ui/03_answer.html
+++ b/pj-ai-poc-ui/03_answer.html
@@ -11,44 +11,44 @@
             <div>
                 <table>
                     <tr>
-                        <td>
-                            <div class="balloon-3-right">
-                                <h2 class="h2"></h2>
-                            </div>
+                        <td width="924" >
+                            <h2 class="sota-c"></h2>
                         </td>
-                        <td>
-                            <img src="img/sota_03.jpg" width=390 height=260 />
+                        <td width="300" ALIGN="RIGHT">
+                            <img src="img/sota_03.jpg" width=300 height=200 />
                         </td>
                     </tr>
                 </table>
-                <div class="section1">
-                    <label id="label1">おすすめの商品</label>
-                    <table cellpadding="0" cellspacing="0" border="0" class="tbl">
-                        <col width="50%" />
+                <div class="section2">
+                    <!---
+                        <label id="label1">おすすめの商品</label>
+                    -->
+                    <table id="dt-commodity" class="table table-striped" style="display: table;">
                         <col width="30%" />
-                        <col width="50%" />
+                        <col width="40%" />
+                        <col width="30%" />
                         <thead class="">
                             <tr class="">
-                                <td class="">画像</td>
-                                <td class="">商品名</td>
-                                <td class="">価格</td>
+                                <td class="ans">商品画像</td>
+                                <td class="ans">商品名</td>
+                                <td class="ans">価格</td>
                             </tr>
                         </thead>
                         <tbody class="">
                             <tr class=" odd"=odd">
-                                <td class=""><img src='./data/Q7_1.jpg' width='125' /></td>
-                                <td class="">国産牛肉（すき焼き用）</td>
-                                <td class="">1500円</td>
+                                <td class="ans"><img src='./data/Q7_1.jpg' width='125' /></td>
+                                <td class="ans">国産牛肉（すき焼き用）</td>
+                                <td class="ans">1500円</td>
                             </tr>
                             <tr class=" even"=even">
-                                <td class=""><img src='./data/Q7_2.jpg' width='125' /></td>
-                                <td class="">国産牛肉（焼肉用）　</td>
-                                <td class="">2500円</td>
+                                <td class="ans"><img src='./data/Q7_2.jpg' width='125' /></td>
+                                <td class="ans">国産牛肉（焼肉用）　</td>
+                                <td class="ans">2500円</td>
                             </tr>
                             <tr class=" odd"=odd">
-                                <td class=""><img src='./data/Q7_3.jpg' width='125' /></td>
-                                <td class="">アメリカ産牛肉　（ステーキ用）</td>
-                                <td class="">2000円</td>
+                                <td class="ans"><img src='./data/Q7_3.jpg' width='125' /></td>
+                                <td class="ans">アメリカ産牛肉　（ステーキ用）</td>
+                                <td class="ans">2000円</td>
                             </tr>
                         </tbody>
                     </table>
