--- a/pj-ai-poc-ui/03_answer_floor.html
+++ b/pj-ai-poc-ui/03_answer_floor.html
@@ -11,14 +11,12 @@
 <div >
 <table>
   <tr>
-    <td>
-	    <div class="balloon-3b-right">
-		  <h2 class="sota"></h2>
-            <img src='./data/FloorMap.png' width="800" />
-		</div>
+    <td width="924" align="center">
+        <h2 class="sota-c"></h2>
+          <img src='./data/FloorMap.png' width="800" />
     </td>
-    <td >
-    	<img src="img/sota_03.jpg" width=390 height=260 >
+    <td width="300" ALIGN="RIGHT" valign="top">
+    	<img src="img/sota_03.jpg" width=300 height=200>
     </td>
   </tr>
 </table>
