--- a/pj-ai-poc-ui/index.htm
+++ b/pj-ai-poc-ui/index.htm
@@ -26,11 +26,11 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta http-equiv="Set-Cookie" content="～" expires=Fri, 31-Dec-1999 23:59:59 GMT>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.csvToTable.js"></script>
-    <script src="load.js"></script>
-    <!--<script src="speech.1.0.0.js" type="text/javascript"></script>-->
     <script type="text/javascript">
         function init() {
             try{
@@ -46,7 +46,7 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
                 // 接続イベント
                 ws.onopen = function onOpen(evt) {
                     //ここで待受け画面に切り替える
-                    $('#page').load('01_search.html');
+                    waitFace();
                 }
 
                  // メッセージ受信イベント
@@ -57,16 +57,16 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
                         // 状態により画面表示を切り替える
                         switch (jsonData["destStatus"]) {
                             case "waitFace":
-                                $('#page').load('01_search.html');
+                                waitFace();
                                 break;
                             case "waitQuestion":
-                                $('#page').load('02_listen.html');
+                                waitQuestion();
                                 break;
                             case "showAnswer":
-                                $('#page').load('03_answer.html');
+                                showAnswer();
                                 break;
                             case "endApplication":
-                                document.getElementById("output").value = "終了";
+                                dendApplication();
                                 break;
                         }
                     }
@@ -85,6 +85,32 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
                  }
             } catch (e) { alert(e.message); }
         };
+
+        function waitFace() {
+            //$('#page').load('01_search.html');
+            $("#titletext").text("お話相手を探し中です・・・");
+            $("#sotasays").html("ボクと目を合わせてね")
+            $("#titleicons").removeClass("fa fa-volume-control-phone").removeClass("fa fa-volume-up").addClass("fa fa-user-o");
+            $("#dynamicarea").html('<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>目を合わせると会話が開始します</B></font></div>')
+        }
+
+        function waitQuestion() {
+            //$('#page').load('02_listen.html');
+            $("#titletext").text("話かけられるのを待ってます");
+            $("#sotasays").html("いらっしゃいませ！<br>なにかご用ですか？")
+            $("#titleicons").removeClass("fa fa-user").removeClass("fa fa-volume-up").addClass("fa fa-volume-control-phone");
+            $("#dynamicarea").html('<div class="switch" style="width:100%;text-align:center;color:#e00000;font-size:70px"><font face="メイリオ"><B>目が青くなったら、質問してね！</B></font></div>')
+        }
+
+        function showAnswer() {
+            //$('#page').load('03_answer.html');
+            ("#titletext").text("答えます");
+        }
+
+        function endApplication() {
+            document.getElementById("output").value = "終了";
+        }
+
 
         function setCommodityTable(text) {
             metatag = text.split("#");
@@ -119,57 +145,32 @@ document is confidential and proprietary to Microsoft. It is disclosed and can b
     <div class="container-fluid">
         <div class="row">
             <div id="page"></div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row"><div class="col-md-12"><p></p> </div> </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p class="titleicon"><i id="titleicons" class="fa fa-chain-broken" aria-hidden="true"></i></p>
+                <p id="titletext" class="title">開始したらここが変わります</p>
             </div>
         </div>
-
-                <!--<div class="row">
-                <div class="col-md-12">
-                    <h2>
-                        音声認識から回答までのテスト
-                    </h2>
+        <hr/>
+        <div class="row flexiblebox">
+            <div class="col-md-9">
+                <div class="balloon-1-right flexiblebox" display:inline;>
+                    <h1 class="sota" id="sotasays">開始したらここが変わります</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-12"><p>Microsoft Cognitive Servicesを利用したPoC</p></div>
+            <div class="col-md-3 flexiblebox">
+                <img src="img/sota_01.jpg" class="media-object img-circle img-responsive flexiblebox">
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" id="useMic" checked/> マイクを使って話しかける
-                        </label>
-                    </div>
-                </div>
+        </div>
+        <hr/>
+        <div class="row">
+            <div id="dynamicarea">
             </div>
-            <div class="row"></div>
-            <div class="row">
-                <div class="col-sm-9"><button type="button" class="btn btn-primary" onclick="init()">話しかける</button></div>
-                <div class="col-sm-1"></div>
-                <div class="col-sm-2"></div>
-            </div>
-            <p></p>
-            <form>
-                <div class="form-group">
-                    <label>聞き取った内容</label>
-                    <textarea id="output" style='width:400px;' rows="5" class="form-control"></textarea>
-                </div>
-            </form>
-            <div class="row">
-                <div class="col-sm-9"><button type="button" class="btn btn-success" onclick="GetQnA()">回答表示</button></div>
-                <div class="col-sm-1"></div>
-                <div class="col-sm-2"></div>
-            </div>
-            <p></p>
-            <form>
-                <div class="form-group">
-                    <label>おすすめの回答</label>
-                    <textarea id="output_answer" style='width:400px;' rows="5" class="form-control"></textarea>
-                </div>
-            </form>
-            <p></p>
-            <label id="label1"></label>
-            <table id="dt-commodity"class="table table-striped"></table>-->
-
-            </div>
+        </div>
+    </div>
 </body>
 </html>        
